--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -74,6 +74,8 @@
         </activity>
         <activity android:name=".ShareFileActivity">
         </activity>
+        <activity android:name=".TransitionActivity">
+        </activity>
     </application>
 
 </manifest>
